# fastapi_sqlalchemy_jokes

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: db.py  main.py
src/jokes/: deps.py  schemas.py  use_cases.py
src/models/: joke.py
